# feeds-r-us

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: __init__.py  feeds.py  intel.py  newsletters.py  router.py  users.py
app/core/: config.py  logging.py  security.py
app/db/: session.py
app/models/: __init__.py  base.py  feed.py  intel.py  newsletter.py  user.py
app/schemas/: common.py  feed.py  intel.py  newsletter.py  user.py
app/services/: auth.py  ingestion.py  newsletter_ai.py  retention.py
app/tasks/: scheduler.py
docs/: architecture.md  deployment-guide.md
